--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -24,7 +24,8 @@
       {
         "ts": "never"
       }
-    ]
+    ],
+    "class-methods-use-this": "off"
   },
   "settings": {
     "import/resolver": {
